# tpcds-kit-cmake

./: .gitignore  CMakeLists.txt  README.md
